# eu4_bevy

./: .gitignore  Cargo.toml  Readme.md  settings.json
src/: main.rs
src/core/: game.rs  mod.rs  settings.rs  states.rs
